# Time-Series-Library

./: .env.template  .gitignore  .mcp.json  CLAUDE-zh.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Function_Interpolation_Test.ipynb  GITHUB_MCP_SETUP.md  HOW_TO_USE_BEST_MODEL.md  IMPLEMENTATION_SUMMARY.md  KanEX2.ipynb  LICENSE  MCP_SERVERS.md  PHASE1_TEST_REPORT.md  PHASE2_MSE_FIX_RESULTS.md  PHASE2_PROGRESS_UPDATE.md  PHASE2_TRAINING_STATUS.md  PHASE3_FINAL_REPORT.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  README_zh.md  TIMESNET_REPRODUCTION_GUIDE.md  TimesNet_异常检测完整训练流程.md  auto_activate_setup.sh  compair_kan_mlp.py  config_update.py  demo.py  doc.txt  docker-compose.yml  download_datasets.py  for_test.sh  multivar_compair_kan_mlp.py  plot.ipynb  plot_compair.py  pyproject.toml  requirements.txt  result_anomaly_detection.txt  result_diffusion_forecast.txt  (+23 more)
.venv-mac/: pyvenv.cfg
.venv-win/: pyvenv.cfg
PaperWritting/: generate_figures.py  generate_opening_report_docx.js  generate_proposal_docx.py  package-lock.json  package.json  requirement.md  图表生成完成总结.md  开题报告.docx  开题报告.md  开题报告_v2.docx  开题报告修改总结.md  毕业设计要求.docx  草稿.md
data_preprocess/: analyze_time_continuity.py  anomaly_filtered_Traindata.py  split_train_test.py  subsample_minute.py
data_provider/: contact_loader_fixed.py  data.ipynb  data_factory.py  data_loader.py  m4.py  stock_market.py  stock_sampler.py  uea.py
docs/: FR2_INTEGRATION_GUIDE.md  IMPLEMENTATION_DETAILS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  QA.md  iTransformerDiffusionDirect_Refactoring_Plan.md  全量预测.md  (+3 more)
exp/: exp_basic.py  (+10 more)
(+1608 files in other folders)
